<resources>
    <string name="app_name">App Message</string>
    <string name="hint_login">Digite seu email</string>
    <string name="hint_password">Digite sua senha</string>
    <string name="buton_text_make_login">Fazer login</string>
    <string name="btn_make_register">Registre-se</string>
    <string name="register_name">Digite seu nome completo</string>
    <string name="register_login">Digite seu email</string>
    <string name="register_create_password">Crie sua senha</string>
    <string name="confirm_password">Confirme sua senha</string>
    <string name="btn_register">Registrar-se</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="write_text">Digite seu post</string>
    <string name="empty_fild">Por favor, preencha todos os campos</string>
    <string name="password_lenght">Sua senha deve ter no mínimo 4 caracters</string>
    <string name="password_not_confirm">Senha não confirmada</string>
    <string name="login_existing">Este login já está sendo utilizado</string>
    <string name="login_success">Login feito com sucesso</string>
    <string name="register_not_success">Registro não realizado</string>
    <string name="email_already">Já existe um e-mail cadastrado em nosso sistema que corresponde a esse, por favor, faça o login ou click em esqueci a senha</string>
    <string name="register_success">Registro feito com sucesso</string>
    <string name="login_incomplete">Login não realizado</string>
    <string name="atention">Atenção</string>
    <string name="delete_post">Você deseja apagar este post?</string>
    <string name="yes">Sim</string>
    <string name="not">Não</string>
    <string name="post_delete_success">Seu post foi deletado com sucesso!</string>
    <string name="exception_owner_post">Você só pode clicar em suas mensagens</string>
    <string name="message_nodeleted">Sua mensagem não foi deletada</string>
</resources>